--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "themes/ananke"]
-	path = themes/ananke
-	url = https://github.com/budparr/gohugo-theme-ananke.git
-[submodule "themes/herring-cove"]
-	path = themes/herring-cove
-	url = https://github.com/spf13/herring-cove.git
-[submodule "themes/hugo-geo"]
-	path = themes/hugo-geo
-	url = https://github.com/alexurquhart/hugo-geo.git
+[submodule "themes/strange-case"]
+	path = themes/strange-case
+	url = https://github.com/ExchangeRate-API/strange-case.git
